crates/paigasus-helikon-macros/tests/ui/bad_signature_not_async.stderr
error: #[tool] requires an `async fn`
  --> tests/ui/bad_signature_not_async.rs:17:1
   |
17 | fn nope(_ctx: &ToolContext<C>, _args: A) -> Result<O, ToolError> {
   | ^^
